@@ -59,6 +59,7 @@ class WebAppGateway(webapp.RequestHandler, gateway.BaseGateway):
 
     def get(self):
         self.response.headers['Content-Type'] = 'text/plain'
+        self.response.headers['Server'] = gateway.SERVER_NAME
         self.error(405)
         self.response.out.write("405 Method Not Allowed\n\n" + \
             "To access this PyAMF gateway you must use POST requests " + \
@@ -74,7 +75,7 @@ class WebAppGateway(webapp.RequestHandler, gateway.BaseGateway):
         try:
             request = remoting.decode(body, context)
         except pyamf.DecodeError:
-            self.logger.error(gateway.format_exception())
+            self.logger.exception(gateway.format_exception())
 
             response = "400 Bad Request\n\nThe request body was unable to " \
                 "be successfully decoded."
@@ -84,6 +85,7 @@ class WebAppGateway(webapp.RequestHandler, gateway.BaseGateway):
 
             self.error(400)
             self.response.headers['Content-Type'] = 'text/plain'
+            self.response.headers['Server'] = gateway.SERVER_NAME
             self.response.out.write(response)
 
             return
@@ -96,7 +98,7 @@ class WebAppGateway(webapp.RequestHandler, gateway.BaseGateway):
         except (KeyboardInterrupt, SystemExit):
             raise
         except:
-            self.logger.error(gateway.format_exception())
+            self.logger.exception(gateway.format_exception())
 
             response = "500 Internal Server Error\n\nThe request was " \
                 "unable to be successfully processed."
@@ -106,6 +108,7 @@ class WebAppGateway(webapp.RequestHandler, gateway.BaseGateway):
 
             self.error(500)
             self.response.headers['Content-Type'] = 'text/plain'
+            self.response.headers['Server'] = gateway.SERVER_NAME
             self.response.out.write(response)
 
             return
@@ -116,7 +119,7 @@ class WebAppGateway(webapp.RequestHandler, gateway.BaseGateway):
         try:
             stream = remoting.encode(response, context)
         except pyamf.EncodeError:
-            self.logger.error(gateway.format_exception())
+            self.logger.exception(gateway.format_exception())
 
             response = "500 Internal Server Error\n\nThe request was " \
                 "unable to be encoded."
@@ -126,6 +129,7 @@ class WebAppGateway(webapp.RequestHandler, gateway.BaseGateway):
 
             self.error(500)
             self.response.headers['Content-Type'] = 'text/plain'
+            self.response.headers['Server'] = gateway.SERVER_NAME
             self.response.out.write(response)
 
             return
@@ -134,6 +138,8 @@ class WebAppGateway(webapp.RequestHandler, gateway.BaseGateway):
 
         self.response.headers['Content-Type'] = remoting.CONTENT_TYPE
         self.response.headers['Content-Length'] = str(len(response))
+        self.response.headers['Server'] = gateway.SERVER_NAME
+        
         self.response.out.write(response)
 
     def __call__(self, *args, **kwargs):
